--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
+  <button type="button">Jr</button>
+  <button type="button">Uel</button>
+  <button type="button">Fiona</button>
+  <button type="button">Lloyd</button>
 
 </body>
 </html>
