--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
-  <button type="button">Jr</button>
-  <button type="button">Uel</button>
-  <button type="button">Fiona</button>
-  <button type="button">Lloyd</button>
+  <button href="jr.html" type="button">Jr</button>
+  <button href="yu-il.html" type="button">Uel</button>
+  <button href="fiona.html" type="button">Fiona</button>
+  <button href="lloyd.html" type="button">Lloyd</button>
 
 </body>
 </html>
