--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      a:link, a:visited {
+      background-color: #f44336;
+      color: white;
+      padding: 14px 25px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      }
+
+      a:hover, a:active {
+      background-color: red;
+      }
+    </style>
+  </head>
 <body>
 
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
-  <button href="jr.html" type="button">Jr</button>
-  <button href="yu-il.html" type="button">Uel</button>
-  <button href="fiona.html" type="button">Fiona</button>
-  <button href="lloyd.html" type="button">Lloyd</button>
+  <a href="jr.html">Jr</a>
+  <a href="yu-il.html">Uel</a>
+  <a href="fiona.html">Fiona</a>
+  <a href="lloyd.html">Lloyd</a>
 
 </body>
 </html>
