--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <p>My first paragraph.</p>
   <a href="jr.html">Jr</a>
   <a href="yu-il.html">Uel</a>
-  <a href="fiona.html">Fiona</a>
+  <a href="finn.html">Finn</a>
   <a href="lloyd.html">Lloyd</a>
 
 </body>
