--- a/yu-il.html
+++ b/yu-il.html
@@ -48,11 +48,12 @@ width:200px;
   }
   .UwU3{
     position: absolute;
-top: 50%;
-left:500px;
-width: 100%;
-height: 100px;
-border-style: solid; 
+top: 40%;
+left: 400px;
+width: 500px;
+height: 75px;
+border-style: solid;
+padding: 25px 50px 75px 100px;
   }
     </style>
   </head>
