--- a/yu-il.html
+++ b/yu-il.html
@@ -51,10 +51,12 @@ width:200px;
 top: 40%;
 left: 400px;
 width: 500px;
-height: 75px;
 border-style: solid;
-padding: 25px 50px 75px 100px;
+border-color: rgba(225, 225, 225, 0.75);
+padding: 35px 35px 75px 100px;
+background: rgba(225, 225, 225, 0.5);
   }
+
     </style>
   </head>
   <body>
@@ -70,7 +72,17 @@ padding: 25px 50px 75px 100px;
     <input class="text" type="text" id="fname" name="fname">
     <p></p>
     <label class="text">Student Number:</label>
-  <input class="text" type="text" id="fname" name="fname">
+    <input class="text" type="text" id="fname" name="fname">
+    <p></p>
+    <div class="change1">
+    <button type="submit" id="change" onclick="OmO()">Log In</button>
+    </div>
     </div>
   </body>
+<script type="text/javascript">
+	function OmO(){
+            alert('Hello world!')
+            document.location='index.html';
+}
+</script>
 </html>
