--- a/jr.html
+++ b/jr.html
@@ -23,7 +23,7 @@
             </nav>
         </header>
         <div>
-            <img class="mainbg" src="/aclcbgmainpic.jpg" alt="mainbg">
+            <img class="mainbg" src="images/aclcbgmainpic.jpg" alt="mainbg">
             <div class="container">
                 <label for="uname"><b>Username</b></label>
                 <input type="text" placeholder="Enter Username" name="uname" required>
