--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
 
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
-  <a href="jr.html">Jr</a>
-  <a href="yu-il.html">Uel</a>
-  <a href="fiona.html">Fiona</a>
-  <a href="lloyd.html">Lloyd</a>
+  <a href="study.html">Study Guide</a>
+  <a href="UwU - Copy.html">Quiz</a>
 
 </body>
 </html>
