--- a/Quiz.html
+++ b/Quiz.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="style-quiz.css" type="text/css">
     <title>Learning 101</title>
 </head>
 <body>
