--- a/Quiz.html
+++ b/Quiz.html
@@ -10,7 +10,7 @@
 </header>
 <nav id="as">
     <ul>
-      <li><a href="mainpage.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="study guide.html">Study Guide</a></li>
       <li><a href="Ans.html">Answer Key</a></li>
     </ul>
