--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
   <a href="study.html">Study Guide</a>
-  <a href="UwU - Copy.html">Quiz</a>
+  <a href="quiz.html">Quiz</a>
 
 </body>
 </html>
