--- a/study.html
+++ b/study.html
@@ -10,6 +10,10 @@
           color: white;
           font-size: 30px;
         }
+        .p {
+          text-align: justify;
+          margin-left: 2;
+        }
 
     </style>
   </head>
