--- a/study.html
+++ b/study.html
@@ -6,13 +6,13 @@
         .header {
           padding: 10px;
           text-align: center;
-          background: #f27b7b;
+          background: #d10e0e;
           color: white;
           font-size: 30px;
         }
-        .p {
+        p {
           text-align: justify;
-          margin-left: 2;
+          text-indent: 20px;
         }
 
     </style>
@@ -21,10 +21,10 @@
 <body>
   <div class="header">
     <h1>Study Guide</h1>
-    <p>Prepare for the quiz!</p>
+    <h4>Prepare for the quiz!</h4>
   </div>
 
-  <a href = "index.html" target = "_self">Home</a>
+
   <h3>Lesson 1. Zoology</h3>
   <p>Zoology (/zoʊˈɒlədʒi/) is the branch of biology that studies the animal kingdom, including the structure, embryology, evolution, classification, habits, and distribution of all animals, both living and extinct, and how they interact with their ecosystems. The term is derived from Ancient Greek ζῷον, zōion ('animal'), and λόγος, logos ('knowledge', 'study').</p>
 
@@ -44,12 +44,13 @@
   <p></p>
 
   <h4>Mammals</h4>
-  <p></p>
+  <p></p><br>
 
 
   <p>The rest of the animal kingdom is dealt with by <b>invertebrate</b> zoology, a vast and very diverse group of animals that includes sponges, echinoderms, tunicates, worms, molluscs, arthropods and many other phyla, but single-celled organisms or protists are not usually included.</p>
 
-
+  <a href = "index.html"style="color:red;font-family:cursive;">Home</a>
+  <a href = "quiz.html"style="color:red;font-family:cursive;text-align:right;">Quiz</a>
 </body>
 
 </html>
