--- a/Quiz.html
+++ b/Quiz.html
@@ -11,8 +11,8 @@
 <nav id="as">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="study guide.html">Study Guide</a></li>
-      <li><a href="Ans.html" id="pop">Answer Key</a></li>
+      <li><a href="study.html">Study Guide</a></li>
+      <li><a href="Answer.html" id="pop">Answer Key</a></li>
     </ul>
 </nav>
 </section>
@@ -138,7 +138,7 @@
 
 <div id="non">
 <p id="last"></p><br>
-<a href="Ans.html">Proceed to Answer Key?</a>
+<a href="Answer.html">Proceed to Answer Key?</a>
 </div>
 
 <br>
