--- a/AnswerKey.html
+++ b/AnswerKey.html
@@ -28,119 +28,88 @@
 <br>
 <form>
 <p>1.	Zoology is the study of _____________.</p>
-<input type="radio"  name="lol" id="lol">A. animals<br>
-
+<p>Answer: A. animals</p>
+<p>(explanation)</p>
 
 2.	Animals that eat on dead and decomposing organisms are called autotrophs. (true or false)<br>
-<input type="radio"  name="no" id="a">true<br>
-
+ <p>Answer: True</p>
+ <p>(explanation)</p>
 
 3.	Echinoderms are an example of vertebrates. (true or false)<br>
-<input type="radio"  name="as" id="b">false<br><br>
+<p>Answer: False</p>
+<p>(explanation)</p>
 
 4.	These animals are aquatic with a simple body system. They are usually found on ocean floors and are sessile. <br>
-<input type="radio"  name="olo" id="c">D. sponges<br><br>
+<p>Answer: D. Sponge</p>
+<p>(explanation)</p>
 
 5.	The word “amphibian” means:<br>
-<input type="radio"  name="say" id="d">A. double life<br>
+<p>Answer: A. Double life</p>
+<p>(explanation)</p>
 
 6.	The duck-billed platypus is an example of a monotreme. (true or false) <br>
-<input type="radio"  name="dg" id="e">true<br>
+<p>Answer: True</p>
+<p>(explanation)</p>
 
 7.	These are aquatic animals with spiny skin surrounding an exoskeleton and are usually on sea<br>
-<input type="radio"  name="ttt" id="f">C. echinoderms<br>
+<p>Answer: C. Echinoderms</p>
+<p>(explanation)</p>
 
 8.	Echinoderms have a radial symmetry. (true or false)<br>
-<input type="radio"  name="yu" id="g">true<br>
+<p>Answer: True</p>
+<p>(explanation)</p>
 
 9.	These animals have a closed circulatory system with a two-chambered heart.<br>
-<input type="radio"  name="ppp" id="h">A. fishes<br>
+<p>Answer: A. Fishes</p>
+<p>(explanation)</p>
 
 10.	Aviary glands are specialized glands that produce milk. (true or false)<br>
-<input type="radio"  name="po" id="i">false<br><br>
+<p>Answer: False</p>
+<p>(explanation)</p>
 
 11.	Reptiles have ultraviolet detectors to spot warm-bodied prey in the dark. (true or false)<br>
-<input type="radio"  name="op" id="j">false<br><br>
+<p>Answer: False</p>
+<p>(explanation)</p>
 
 12.	Animals with no backbone or spinal column are called chordates. (true or false)<br>
-<input type="radio"  name="uu" id="k">false<br><br>
+<p>Answer: False</p>
+<p>(explanation)</p>
 
 13.	It is the hard outer skeleton that covers the entire body of anthropods<br>
-<input type="radio"  name="www" id="l">B. exoskeleton<br>
+<p>Answer: B. Exoskeleton</p>
+<p>(explanation)</p>
 
 14.	These are unsegmented roundworms with a tough outer cuticle that are shed as they grow.<br>
-<input type="radio"  name="xxx" id="m">A. nematodes<br>
+<p>Answer: A. Nematodes</p>
+<p>(explanation)</p>
 
 15.	Mollusk is one of the most diverse groups of animals with at least 50, 000 species. (true or false)<br>
-<input type="radio"  name="bb" id="n">true<br>
+<p>Answer: True</p>
+<p>(explanation)</p>
 
 16.	Which of the following is an example of a placental mammal?<br>
-<input type="radio"  name="qpq" id="o">A. hedgehog<br>
+<p>Answer: A. Hedgehog</p>
+<p>(explanation)</p>
 
 17.	Which of these pairs of animals have four-chambered hearts?<br>
-<input type="radio"  name="pqp" id="p">D. reptiles, birds<br><br>
+<p>Answer: D. Reptiles, birds</p>
+<p>(explanation)</p>
 
 18.	Animals are multicellular. (true or false)<br>
-<input type="radio"  name="zz" id="q">false<br><br>
+<p>Answer: False</p>
+<p>(explanation)</p>
 
 19.	Flatworms exhibit trilateral symmetry. (true or false)<br>
-<input type="radio"  name="ee" id="r">false<br><br>
+<p>Answer: False</p>
+<p>(explanation)</p>
 
 20.	Hair or Fur of mammals are made up of a tough protein called _________ that grows out of a follicle in the skin.<br>
-<input type="radio"  name="ala" id="s">C. keratin<br>
+<p>Answer: C. Keratin</p>
+<p>(explanation)</p>
 
 <br>
 <p id="last"></p>
 <br>
-</form>
 
-    <script>
-    function idont() {
-         var num1 = document.getElementById("lol");
-         var num2 = document.getElementById("a");
-         var num3 = document.getElementById("b");
-         var num4 = document.getElementById("c");
-         var num5 = document.getElementById("d");
-         var num6 = document.getElementById("e");
-         var num7 = document.getElementById("f");
-         var num8 = document.getElementById("g");
-         var num9 = document.getElementById("h");
-         var num10 = document.getElementById("i");
-         var num11 = document.getElementById("j");
-         var num12 = document.getElementById("k");
-         var num13 = document.getElementById("l");
-         var num14 = document.getElementById("m");
-         var num15 = document.getElementById("n");
-         var num16 = document.getElementById("o");
-         var num17 = document.getElementById("p");
-         var num18 = document.getElementById("q");
-         var num19 = document.getElementById("r");
-         var num20 = document.getElementById("s");
-         (num1.checked) ? (lol = 1) : (lol = 0);
-         (num2.checked) ? (a = 1) : (a = 0);
-         (num3.checked) ? (b = 1) : (b = 0);
-         (num4.checked) ? (c = 1) : (c = 0);
-         (num5.checked) ? (d = 1) : (d = 0);
-         (num6.checked) ? (e = 1) : (e = 0);
-         (num7.checked) ? (f = 1) : (f = 0);
-         (num8.checked) ? (g = 1) : (g = 0);
-         (num9.checked) ? (h = 1) : (h = 0);
-         (num10.checked) ? (i = 1) : (i = 0);
-         (num11.checked) ? (j = 1) : (j = 0);
-         (num12.checked) ? (k = 1) : (k = 0);
-         (num13.checked) ? (l = 1) : (l = 0);
-         (num14.checked) ? (m = 1) : (m = 0);
-         (num15.checked) ? (n = 1) : (n = 0);
-         (num16.checked) ? (o = 1) : (o = 0);
-         (num17.checked) ? (p = 1) : (p = 0);
-         (num18.checked) ? (q = 1) : (q = 0);
-         (num19.checked) ? (r = 1) : (r = 0);
-         (num20.checked) ? (s = 1) : (s = 0);
-         var total = lol+a+b+c+d+e+f+g+h+i+j+k+l+m+n+o+p+q+r+s;
-         document.getElementById("last").innerHTML = "your total score is "+ total;
-         alert('your total score is '+ total +'. Proceed to answer key?');
-         
-    }
-    </script>
 </body>
 </html>
