--- a/Quiz.html
+++ b/Quiz.html
@@ -127,7 +127,7 @@
 20.	Hair or Fur of mammals are made up of a tough protein called _________ that grows out of a follicle in the skin.<br>
 <input type="radio"  name="ala">A. argan<br>
 <input type="radio"  name="ala">B. aryan<br>
-<input type="radio"  name="ala" id="s">C. keratin<br>
+<input type="radio"  name="ala" id="ss">C. keratin<br>
 <input type="radio"  name="ala">D. NADPH+<br><br>
 
 <input type="button" value="press me to know your scores" onclick="idont()">
@@ -173,7 +173,7 @@
          var num17 = document.getElementById("p");
          var num18 = document.getElementById("q");
          var num19 = document.getElementById("r");
-         var num20 = document.getElementById("s");
+         var num20 = document.getElementById("ss");
          (num1.checked) ? (lol = 1) : (lol = 0);
          (num2.checked) ? (a = 1) : (a = 0);
          (num3.checked) ? (b = 1) : (b = 0);
