--- a/Answer.html
+++ b/Answer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="style-answer.css" type="text/css">
     <title>Answer key page</title>
 </head>
 <body>
@@ -10,9 +10,9 @@
 </header>
 <nav id="as">
     <ul>
-      <li><a href="mainpage.html">Home</a></li>
-      <li><a href="study guide.html">Study Guide</a></li>
-      <li><a href="Ans.html">Answer Key</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="study.html">Study Guide</a></li>
+      <li><a href="quiz.html">Quiz</a></li>
     </ul>
 </nav>
 </section>
