--- a/study.html
+++ b/study.html
@@ -3,12 +3,29 @@
   <head>
     <title>Biology Study Guide Page 1</title>
     <style>
+        body {
+          background-color:#fff7b5;
+        }
         .header {
           padding: 10px;
           text-align: center;
-          background: #f27b7b;
+          background: #d10e0e;
           color: white;
           font-size: 30px;
+        }
+        p {
+          text-align: justify;
+          text-indent: 20px;
+        }
+        h4 {
+          color:red;
+          padding:5px;
+        }
+        .center {
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+          width: 50%;
         }
 
     </style>
@@ -17,35 +34,74 @@
 <body>
   <div class="header">
     <h1>Study Guide</h1>
-    <p>Prepare for the quiz!</p>
+    <h3>Prepare for the quiz!</h3>
   </div>
 
-  <a href = "index.html" target = "_self">Home</a>
-  <h3>Lesson 1. Zoology</h3>
+
+  <h3 style = "background:#3832e5;color:white;padding:5px;">Lesson 1. Food chain</h3>
+  <img src="images/food-chain.jpeg" alt="Food Chain" class="center" style="text-align:center;height:50%;Width:50%;">
+  <p>A food chain is a linear network of links in a food web starting from producer organisms (such as grass or trees which use radiation from the Sun to make their food via photosynthesis) and ending at an apex predator species (like grizzly bears or killer whales), detritivores (like earthworms or woodlice), or decomposer species (such as fungi or bacteria). A food chain also shows how organisms are related to each other by the food they eat.</p>
+  <p>Each level of a food chain represents a different trophic level.</p>
+
+  <h4>Autotrophs</h4>
+  <p>The foundation of the food chain consists of primary producers. Primary producers, or autotrophs, utilize energy derived from either sunlight or inorganic chemical compounds to create complex organic compounds</p>
+
+  <h4>Heterotrophs</h4>
+  <p>A heterotroph is an organism that cannot produce its own food, instead taking nutrition from other sources of organic carbon, mainly plant or animal matter. In the food chain, heterotrophs are primary, secondary and tertiary consumers, but not producers.</p>
+
+  <h4>Decomposers</h4>
+  <p>Decomposers, which feed on dead animals, break down the organic compounds into simple nutrients that are returned to the soil. These are the simple nutrients that plants require to create organic compounds.</p>
+
+
+
+  <h3 style = "background:#3832e5;color:white;padding:5px;">Lesson 2. Zoology</h3>
   <p>Zoology (/zoʊˈɒlədʒi/) is the branch of biology that studies the animal kingdom, including the structure, embryology, evolution, classification, habits, and distribution of all animals, both living and extinct, and how they interact with their ecosystems. The term is derived from Ancient Greek ζῷον, zōion ('animal'), and λόγος, logos ('knowledge', 'study').</p>
 
-  <h3>1.1. Vertebrates and Invertebrates</h3>
+  <h3 style="background:#3832e5;color:white;padding:2px;">2.1. Vertebrates and Invertebrates</h3>
+  <img src="images/Invertebrate-And-Vertebrate.png" alt="Invertebrates and Vertebrates" class="center" style="text-align:center;height:50%;Width:50%;">
   <p><b>Vertebrate</b> zoology is the biological discipline that consists of the study of vertebrate animals, that is animals with a backbone, such as fish, amphibians, reptiles, birds and mammals.</p>
 
   <h4>Fish</h4>
-  <p></p>
+  <p>Fish are aquatic, craniate, gill-bearing animals that lack limbs with digits.<br>
+  </p>
 
   <h4>Amphibians</h4>
-  <p></p>
+  <p>Amphibians are ectothermic, tetrapod vertebrates of the class Amphibia. The word amphibian is derived from the Ancient Greek term ἀμφίβιος (amphíbios), which means 'both kinds of life', ἀμφί meaning 'of both kinds' and βιος meaning 'life'.
+  </p>
 
   <h4>Reptiles</h4>
-  <p></p>
+  <p>Reptiles are air-breathing vertebrates covered in special skin made up of scales, bony plates, or a combination of both.
+     All regularly shed the outer layer of their skin. Their metabolism depends on the temperature of their environment.<br>
+      </p>
 
   <h4>Birds</h4>
-  <p></p>
+  <p>Birds are a group of warm-blooded vertebrates constituting the class Aves /ˈeɪviːz/, characterised by feathers, toothless beaked jaws, the laying of hard-shelled eggs, a high metabolic rate, a four-chambered heart, and a strong yet lightweight skeleton.</p>
 
   <h4>Mammals</h4>
-  <p></p>
+  <p>Mammals (from Latin mamma, 'breast') are a group of vertebrates constituting the class Mammalia (/məˈmeɪliə/), characterized by the presence of mammary glands which in females produce milk for feeding (nursing) their young, a neocortex (a region of the brain), fur or hair, and three middle ear bones.</p><br>
 
 
   <p>The rest of the animal kingdom is dealt with by <b>invertebrate</b> zoology, a vast and very diverse group of animals that includes sponges, echinoderms, tunicates, worms, molluscs, arthropods and many other phyla, but single-celled organisms or protists are not usually included.</p>
+  <h4>Sponges</h4>
+  <p>Sponges, the members of the phylum Porifera (/pəˈrɪfərə/; meaning 'pore bearer'), are a basal animal clade as a sister of the Diploblasts. They are multicellular organisms that have bodies full of pores and channels allowing water to circulate through them, consisting of jelly-like mesohyl sandwiched between two thin layers of cells.</p>
 
+  <h4>Echinoderms</h4>
+  <p>An echinoderm (/ɪˈkaɪnəˌdɜːrm, ˈɛkə-/)[2] is any member of the phylum Echinodermata (/ɪˌkaɪnoʊˈdɜːrmətə/; from Ancient Greek ἐχῖνος (ekhînos) 'hedgehog', and δέρμα (dérma) 'skin') of marine animals. The adults are recognizable by their (usually five-point) radial symmetry, and include starfish, brittle stars, sea urchins, sand dollars, and sea cucumbers, as well as the sea lilies or "stone lilies".</p>
 
+  <h4>Tunicates</h4>
+  <p>A tunicate is a marine invertebrate animal, a member of the subphylum Tunicata (/ˌtjuːnɪˈkeɪtə/). It is part of the Chordata, a phylum which includes all animals with dorsal nerve cords and notochords (including vertebrates).</p>
+
+  <h4>Worms</h4>
+  <p>Worms are many different distantly related bilateral animals that typically have a long cylindrical tube-like body, no limbs, and no eyes (not always). Many invertebrates are called worms, like nematodes, unsegmented roundworms with a tough outer cuticle that are shed as they grow.</p>
+
+  <h4>Molluscs</h4>
+  <p>Molluscs are the largest marine phylum, comprising about 23% of all the named marine organisms. Numerous molluscs also live in freshwater and terrestrial habitats. They are highly diverse, not just in size and anatomical structure, but also in behaviour and habitat.</p>
+
+  <h4>Arthropods</h4>
+  <p>Arthropods (/ˈɑːrθrəpɒd/, from Ancient Greek ἄρθρον (arthron) 'joint', and πούς (pous) 'foot' (gen. ποδός)) are invertebrate animals having an exoskeleton, a segmented body, and paired jointed appendages. Arthropods form the phylum Arthropoda. They are distinguished by their jointed limbs and cuticle made of chitin, often mineralised with calcium carbonate.</p>
+
+  <a href = "index.html"style="color:white;font-family:cursive;background:red;">Home</a><br><br>
+  <a href = "quiz.html"style="color:white;font-family:cursive;text-align:right;background:red;">Quiz</a>
 </body>
 
 </html>
