--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="headerwrapper">
         <header>
             <div class="logotitle">
-                <img class="logo" src="pagelogo.png" alt="logo" width="200px" height="50%">
+                <img class="logo" src="pagelogo.svg" alt="logo" width="200px" height="50%">
             </div>
         <nav>
             <ul class="nav_links">
@@ -26,17 +26,17 @@
         </div>
         <div class="threemainchoices">
             <h1>What would you like to do today?</h1>
-            <div class="choiceone">
+            <div class="choiceone" onclick="location.href='Study.html';" style="cursor: pointer;">
                 <h2>Study</h2>
-                <a href="Study.html" class="fill-div"></a>
+                <img class="studylogoicon" src="studylogo.svg" width="100px" height="100px">
             </div>
-            <div class="choicetwo">
+            <div class="choicetwo" onclick="location.href='Quiz.html';" style="cursor: pointer;">
                 <h2>Quiz</h2>
-                <a href="Quiz.html" class="fill-div"></a>
+                <img class="studylogoicon" src="quizlogo.svg" width="100px" height="100px">
             </div>
-            <div class="choicethree">
+            <div class="choicethree" onclick="location.href='Answer.html';" style="cursor: pointer;">
                 <h2>Answer Key</h2>
-                <a href="Answer.html" class="fill-div"></a>
+                <img class="studylogoicon" src="answerlogo.svg" width="100px" height="100px">
             </div>
         </div>
     </body>
