--- a/Answer.html
+++ b/Answer.html
@@ -33,39 +33,39 @@
 
 2.	Animals that eat on dead and decomposing organisms are called autotrophs. (true or false)<br>
  <p>Answer: True</p>
- <p>(explanation)</p>
+ <p>Zoology (also known as animal science) is the branch of biology devoted to the study of animal life. It covers areas ranging from the structure of organisms to the subcellular unit of life. Some zoologists are interested in the biology of particular groups of animals.</p>
 
 3.	Echinoderms are an example of vertebrates. (true or false)<br>
 <p>Answer: False</p>
-<p>(explanation)</p>
+<p>Echinoderms are a phylum of marine invertebrates that include starfish, brittle stars, sea cucumbers, sea urchins, sand dollars, and crinoids.</p>
 
 4.	These animals are aquatic with a simple body system. They are usually found on ocean floors and are sessile. <br>
 <p>Answer: D. Sponge</p>
-<p>(explanation)</p>
+<p>They are members of the phylum Porifera and since Porifera have no internal organs, nervous tissue, circulatory system, or digestive systems, making them the most primitive of the multi-cellular animals. To support and protect their soft bodies, sponges produce skeletons of calcium carbonate, silica, or a soft organic material called spongin.</p>
 
 5.	The word “amphibian” means:<br>
 <p>Answer: A. Double life</p>
-<p>(explanation)</p>
+<p>Amphibian comes from the Greek word amphibios, meaning “a being with a double life”. They are said to live a double life because they often live in water and on land at different stages of their life.</p>
 
 6.	The duck-billed platypus is an example of a monotreme. (true or false) <br>
 <p>Answer: True</p>
-<p>(explanation)</p>
+<p>Monotremes are a group of mammals that lay eggs. There are only five living species of monotreme, these include the platypus and echidnas.</p>
 
 7.	These are aquatic animals with spiny skin surrounding an exoskeleton and are usually on sea<br>
 <p>Answer: C. Echinoderms</p>
-<p>(explanation)</p>
+<p>Echinoderms are invertebrate marine animals belonging to the phylum Echinodermata, characterized by a hard, spiny covering or skin. Animals include starfishes, sand dollars, etc.</p>
 
 8.	Echinoderms have a radial symmetry. (true or false)<br>
 <p>Answer: True</p>
-<p>(explanation)</p>
+<p>Echinoderms start as having bilateral symmetry as larvae. Once they reach adulthood they attain radial symmetry.</p>
 
 9.	These animals have a closed circulatory system with a two-chambered heart.<br>
 <p>Answer: A. Fishes</p>
-<p>(explanation)</p>
+<p>Fishes are gilled animals that have 2-chambered hearts. The 2-chambered heart is a simple organ that pumps blood for animals with gills and single circulation.</p>
 
 10.	Aviary glands are specialized glands that produce milk. (true or false)<br>
 <p>Answer: False</p>
-<p>(explanation)</p>
+<p>Aviary glands (also known as oil glands) are specialized glands that produce oil to provide water-proofing and maintenance of plumage brightness.</p>
 
 11.	Reptiles have ultraviolet detectors to spot warm-bodied prey in the dark. (true or false)<br>
 <p>Answer: False</p>
