--- a/Answer.html
+++ b/Answer.html
@@ -17,15 +17,7 @@
 </nav>
 </section>
 <body>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+   
 <form>
 <p>1.	Zoology is the study of _____________.</p>
 <p>Answer: A. animals</p>
@@ -69,47 +61,43 @@
 
 11.	Reptiles have ultraviolet detectors to spot warm-bodied prey in the dark. (true or false)<br>
 <p>Answer: False</p>
-<p>(explanation)</p>
+<p>Reptiles cannot detect Ultraviolet radiation but can detect infrared radiation. Vipers, pythons and boas have holes on their faces called pit organs, which contain a membrane that can detect infrared radiation from warm bodies up to one metre away.</p>
 
 12.	Animals with no backbone or spinal column are called chordates. (true or false)<br>
 <p>Answer: False</p>
-<p>(explanation)</p>
+<p>Any animal with no backbone or spinal column is called an invertebrate. Chordates animals which are either vertebrates or closely to invertebrates. They are connected by having, a notochord, a hollow dorsal nerve cord, pharyngeal slits and a post-anal tail at least at some point in their life cycle.</p>
 
 13.	It is the hard outer skeleton that covers the entire body of anthropods<br>
 <p>Answer: B. Exoskeleton</p>
-<p>(explanation)</p>
+<p>Exoskeletons are a rigid external covering for the body in some invertebrate animals, especially arthropods, providing both support and protection.</p>
 
 14.	These are unsegmented roundworms with a tough outer cuticle that are shed as they grow.<br>
 <p>Answer: A. Nematodes</p>
-<p>(explanation)</p>
+<p>Nematodes help distribute bacteria and fungi through the soil and along roots by carrying live and dormant microbes on their surfaces and in their digestive systems. they are also among the most abundant animals on Earth.</p>
 
 15.	Mollusk is one of the most diverse groups of animals with at least 50, 000 species. (true or false)<br>
 <p>Answer: True</p>
-<p>(explanation)</p>
+<p>The word mollusk comes from a french word meaning "soft-bodied". They are invertebrates of a large phylum which includes snails, slugs, mussels, and octopuses. They have a soft unsegmented body and live in aquatic or damp habitats, and most kinds have an external calcareous shell. Since the earth is mostly comprised of water mollusks have developed in many ways making them a very diverse species. </p>
 
 16.	Which of the following is an example of a placental mammal?<br>
 <p>Answer: A. Hedgehog</p>
-<p>(explanation)</p>
+<p>Hedgehog babies are born looking like mini hedgehogs and are pretty much developed.</p>
 
 17.	Which of these pairs of animals have four-chambered hearts?<br>
 <p>Answer: D. Reptiles, birds</p>
-<p>(explanation)</p>
+<p>Reptiles typically have three-chambered hearts however, the crocodile evolved in a way that makes it develop a four-chambered heart to hunt more efficiently as more oxygen is pumped throughout the body. Birds developed four-chambered hearts for proper blood circulation during flight. )</p>
 
 18.	Animals are multicellular. (true or false)<br>
-<p>Answer: False</p>
-<p>(explanation)</p>
+<p>Answer: True</p>
+<p>All members of Animalia are multicellular, and all are heterotrophs (that is, they rely directly or indirectly on other organisms for their nourishment). Most ingest food and digest it in an internal cavity. Animal cells lack the rigid cell walls that characterize plant cells.</p>
 
 19.	Flatworms exhibit trilateral symmetry. (true or false)<br>
 <p>Answer: False</p>
-<p>(explanation)</p>
+<p>Flatworms exhibit bilateral symmetry. Bilateral symmetry is when similar anatomical parts are arranged on opposite sides of a median axis so that only one plane can divide the individual into essentially identical halves other examples include butterflies and lobsters.</p>
 
 20.	Hair or Fur of mammals are made up of a tough protein called _________ that grows out of a follicle in the skin.<br>
 <p>Answer: C. Keratin</p>
-<p>(explanation)</p>
-
-<br>
-<p id="last"></p>
-<br>
+<p>Keratin is a type of protein found on epithelial cells, which line the inside and outside surfaces of the body. Keratins help form the tissues of the hair, nails, and the outer layer of the skin. They are also found on cells in the lining of organs, glands, and other parts of the body.</p>
 
 </body>
 </html>
