--- a/Quiz.html
+++ b/Quiz.html
@@ -117,8 +117,8 @@
 <input type="radio"  name="pqp" id="p">D. reptiles, birds<br><br>
 
 18.	Animals are multicellular. (true or false)<br>
-<input type="radio"  name="zz">true<br>
-<input type="radio"  name="zz" id="q">false<br><br>
+<input type="radio"  name="zz" id="q">true<br>
+<input type="radio"  name="zz">false<br><br>
 
 19.	Flatworms exhibit trilateral symmetry. (true or false)<br>
 <input type="radio"  name="ee">true<br>
