--- a/Answer.html
+++ b/Answer.html
@@ -1,102 +1,132 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="style-answer.css" type="text/css">
+    <style>
+        body{
+          background-color:lightyellow;
+        }
+        .Title{
+          text-align: center;
+          background: green;
+          color: white;
+          font-size: 40px;
+          padding: 1%;
+        }
+        .buttons{
+          text-align: left;
+          color:white;
+          background:lightgreen;
+          font-size:20px;
+          padding:1%;
+          text-decoration:none;
+          font-weight: 800;
+        }
+        p{
+          text-align: justify;
+          text-indent: 15px;
+          background: orange;
+          color:white;
+          padding: 3px;
+        }
+        h2{
+          text-align: justify;
+        }
+        h3{
+          text-align: left;
+          
+        }
+    </style>
     <title>Answer key page</title>
 </head>
-<body>
-<section id="s">
-<header id="as">
-    <h1>Answer Key</h1>
-</header>
-<nav id="as">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="study.html">Study Guide</a></li>
-      <li><a href="quiz.html">Quiz</a></li>
-    </ul>
-</nav>
-</section>
-<body>
-   
-<form>
-<p>1.	Zoology is the study of _____________.</p>
-<p>Answer: A. animals</p>
-<p>(explanation)</p>
 
-2.	Animals that eat on dead and decomposing organisms are called autotrophs. (true or false)<br>
- <p>Answer: True</p>
- <p>Zoology (also known as animal science) is the branch of biology devoted to the study of animal life. It covers areas ranging from the structure of organisms to the subcellular unit of life. Some zoologists are interested in the biology of particular groups of animals.</p>
+<body>
+ <div class="Title">
+     <h1>Answer Key</h1>
+ </div>
+ <div class="buttons">
+    <a href = "index.html">Home</a><br>
+    <a href = "study.html">Study Guide</a><br>
+    <a href = "Quiz.html">Quiz</a>
+ </div>
 
-3.	Echinoderms are an example of vertebrates. (true or false)<br>
-<p>Answer: False</p>
+<br>
+<h2>1.<b>Zoology</b> is the study of _____________.</h2>
+<h3>Answer: A. animals</h3>
+<p>Zoology (also known as animal science) is the branch of biology devoted to the study of animal life. It covers areas ranging from the structure of organisms to the subcellular unit of life. Some zoologists are interested in the biology of particular groups of animals.</p>
+
+<h2>2.	Animals that eat on dead and decomposing organisms are called autotrophs. (true or false)<br></h2>
+ <h3>Answer: True</h3>
+ <p>Autotrophs are organisms that are able to form nutritional organic substances from simple inorganic substances such as carbon dioxide.</p>
+
+<h2>3.	Echinoderms are an example of vertebrates. (true or false)<br></h2>
+<h3>Answer: False</h3>
 <p>Echinoderms are a phylum of marine invertebrates that include starfish, brittle stars, sea cucumbers, sea urchins, sand dollars, and crinoids.</p>
 
-4.	These animals are aquatic with a simple body system. They are usually found on ocean floors and are sessile. <br>
-<p>Answer: D. Sponge</p>
+<h2>4.	These animals are aquatic with a simple body system. They are usually found on ocean floors and are sessile. <br></h2>
+<h3>Answer: D. Sponge</h3>
 <p>They are members of the phylum Porifera and since Porifera have no internal organs, nervous tissue, circulatory system, or digestive systems, making them the most primitive of the multi-cellular animals. To support and protect their soft bodies, sponges produce skeletons of calcium carbonate, silica, or a soft organic material called spongin.</p>
 
-5.	The word “amphibian” means:<br>
-<p>Answer: A. Double life</p>
+<h2>5.	The word “amphibian” means:<br></h2>
+<h3>Answer: A. Double life</h3>
 <p>Amphibian comes from the Greek word amphibios, meaning “a being with a double life”. They are said to live a double life because they often live in water and on land at different stages of their life.</p>
 
-6.	The duck-billed platypus is an example of a monotreme. (true or false) <br>
-<p>Answer: True</p>
+<h2>6.	The duck-billed platypus is an example of a monotreme. (true or false) <br></h2>
+<h3>Answer: True</h3>
 <p>Monotremes are a group of mammals that lay eggs. There are only five living species of monotreme, these include the platypus and echidnas.</p>
 
-7.	These are aquatic animals with spiny skin surrounding an exoskeleton and are usually on sea<br>
-<p>Answer: C. Echinoderms</p>
+<h2>7.	These are aquatic animals with spiny skin surrounding an exoskeleton and are usually on sea<br></h2>
+<h3>Answer: C. Echinoderms</h3>
 <p>Echinoderms are invertebrate marine animals belonging to the phylum Echinodermata, characterized by a hard, spiny covering or skin. Animals include starfishes, sand dollars, etc.</p>
 
-8.	Echinoderms have a radial symmetry. (true or false)<br>
-<p>Answer: True</p>
+<h2>8.	Echinoderms have a radial symmetry. (true or false)<br></h2>
+<h3>Answer: True</h3>
 <p>Echinoderms start as having bilateral symmetry as larvae. Once they reach adulthood they attain radial symmetry.</p>
 
-9.	These animals have a closed circulatory system with a two-chambered heart.<br>
-<p>Answer: A. Fishes</p>
+<h2>9.	These animals have a closed circulatory system with a two-chambered heart.<br></h2>
+<h3>Answer: A. Fishes</h3>
 <p>Fishes are gilled animals that have 2-chambered hearts. The 2-chambered heart is a simple organ that pumps blood for animals with gills and single circulation.</p>
 
-10.	Aviary glands are specialized glands that produce milk. (true or false)<br>
-<p>Answer: False</p>
+<h2>10.	Aviary glands are specialized glands that produce milk. (true or false)<br></h2>
+<h3>Answer: False</h3>
 <p>Aviary glands (also known as oil glands) are specialized glands that produce oil to provide water-proofing and maintenance of plumage brightness.</p>
 
-11.	Reptiles have ultraviolet detectors to spot warm-bodied prey in the dark. (true or false)<br>
-<p>Answer: False</p>
+<h2>11.	Reptiles have ultraviolet detectors to spot warm-bodied prey in the dark. (true or false)<br></h2>
+<h3>Answer: False</h3>
 <p>Reptiles cannot detect Ultraviolet radiation but can detect infrared radiation. Vipers, pythons and boas have holes on their faces called pit organs, which contain a membrane that can detect infrared radiation from warm bodies up to one metre away.</p>
 
-12.	Animals with no backbone or spinal column are called chordates. (true or false)<br>
-<p>Answer: False</p>
+<h2>12.	Animals with no backbone or spinal column are called chordates. (true or false)<br></h2>
+<h3>Answer: False</h3>
 <p>Any animal with no backbone or spinal column is called an invertebrate. Chordates animals which are either vertebrates or closely to invertebrates. They are connected by having, a notochord, a hollow dorsal nerve cord, pharyngeal slits and a post-anal tail at least at some point in their life cycle.</p>
 
-13.	It is the hard outer skeleton that covers the entire body of anthropods<br>
-<p>Answer: B. Exoskeleton</p>
+<h2>13.	It is the hard outer skeleton that covers the entire body of anthropods<br></h2>
+<h3>Answer: B. Exoskeleton</h3>
 <p>Exoskeletons are a rigid external covering for the body in some invertebrate animals, especially arthropods, providing both support and protection.</p>
 
-14.	These are unsegmented roundworms with a tough outer cuticle that are shed as they grow.<br>
-<p>Answer: A. Nematodes</p>
+<h2>14.	These are unsegmented roundworms with a tough outer cuticle that are shed as they grow.<br></h2>
+<h3>Answer: A. Nematodes</h3>
 <p>Nematodes help distribute bacteria and fungi through the soil and along roots by carrying live and dormant microbes on their surfaces and in their digestive systems. they are also among the most abundant animals on Earth.</p>
 
-15.	Mollusk is one of the most diverse groups of animals with at least 50, 000 species. (true or false)<br>
-<p>Answer: True</p>
+<h2>15.	Mollusk is one of the most diverse groups of animals with at least 50, 000 species. (true or false)<br></h2>
+<h3>Answer: True</h3>
 <p>The word mollusk comes from a french word meaning "soft-bodied". They are invertebrates of a large phylum which includes snails, slugs, mussels, and octopuses. They have a soft unsegmented body and live in aquatic or damp habitats, and most kinds have an external calcareous shell. Since the earth is mostly comprised of water mollusks have developed in many ways making them a very diverse species. </p>
 
-16.	Which of the following is an example of a placental mammal?<br>
-<p>Answer: A. Hedgehog</p>
+<h2>16.	Which of the following is an example of a placental mammal?<br></h2>
+<h3>Answer: A. Hedgehog</h3>
 <p>Hedgehog babies are born looking like mini hedgehogs and are pretty much developed.</p>
 
-17.	Which of these pairs of animals have four-chambered hearts?<br>
-<p>Answer: D. Reptiles, birds</p>
+<h2>17.	Which of these pairs of animals have four-chambered hearts?<br></h2>
+<h3>Answer: D. Reptiles, birds</h3>
 <p>Reptiles typically have three-chambered hearts however, the crocodile evolved in a way that makes it develop a four-chambered heart to hunt more efficiently as more oxygen is pumped throughout the body. Birds developed four-chambered hearts for proper blood circulation during flight. )</p>
 
-18.	Animals are multicellular. (true or false)<br>
-<p>Answer: True</p>
+<h2>18.	Animals are multicellular. (true or false)<br></h2>
+<h3>Answer: True</h3>
 <p>All members of Animalia are multicellular, and all are heterotrophs (that is, they rely directly or indirectly on other organisms for their nourishment). Most ingest food and digest it in an internal cavity. Animal cells lack the rigid cell walls that characterize plant cells.</p>
 
-19.	Flatworms exhibit trilateral symmetry. (true or false)<br>
-<p>Answer: False</p>
+<h2>19.	Flatworms exhibit trilateral symmetry. (true or false)<br></h2>
+<h3>Answer: False</h3>
 <p>Flatworms exhibit bilateral symmetry. Bilateral symmetry is when similar anatomical parts are arranged on opposite sides of a median axis so that only one plane can divide the individual into essentially identical halves other examples include butterflies and lobsters.</p>
 
-20.	Hair or Fur of mammals are made up of a tough protein called _________ that grows out of a follicle in the skin.<br>
-<p>Answer: C. Keratin</p>
+<h2>20.	Hair or Fur of mammals are made up of a tough protein called _________ that grows out of a follicle in the skin.<br></h2>
+<h3>Answer: C. Keratin</h3>
 <p>Keratin is a type of protein found on epithelial cells, which line the inside and outside surfaces of the body. Keratins help form the tissues of the hair, nails, and the outer layer of the skin. They are also found on cells in the lining of organs, glands, and other parts of the body.</p>
 
 </body>
