--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             </div>
         <nav>
             <ul class="nav_links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Study</a></li>
-                <li><a href="#">Quiz</a></li>
-                <li><a href="#">Answer Key</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="study.html">Study</a></li>
+                <li><a href="Quiz.html">Quiz</a></li>
+                <li><a href="Answer.html">Answer Key</a></li>
             </ul>
             </nav>
         </header>
@@ -39,5 +39,60 @@
                 <img class="studylogoicon" src="answerlogo.svg" width="100px" height="100px">
             </div>
         </div>
+        <div class="sectionfirst">
+            <div class="sectioncentered">
+                <div>
+                    <section class="sectionone">
+                        <h2 class="headmaintitles"> Explanations you can easily understand</h2>
+                        <div class="letter-spacings">
+                            <p>Study Guides explanations show you step-by-step approaches to solve and understand tough problems. Find solutions in major subject, all written and verified by experts.</p>
+                        </div>
+                    </section>    
+                </div>
+                <div>
+                    <section class="sectionone">
+                        <h2 class="headmaintitles"> Tools for Knowledge</h2>
+                        <div class="letter-spacings">
+                            <p>Some educational tools provide features that streamline collection, grading, and feedback for traditional paper-based class homework while other tools help expand beyond traditional homework by opening up more submission options.</p>
+                        </div>
+                    </section>    
+                </div>
+            </div>        
+        </div>
+        <footer class="footer-distributed">
+            <div class="footer-left">
+                <h3>Study<span>Guides</span></h3>
+                <p class="footer-links">
+                <a href="#">Home</a>
+                <a href="#">Blog</a>
+                <a href="#">About</a>
+                <a href="#">Faq</a>
+                <a href="#">Contact</a></p>
+                <p class="footer-company-name">Study Guides &copy; 2022</p>
+            </div>
+            <div class="footer-center">
+                <div>
+                    <i class="fa fa-map-marker"></i>
+                    <p><span>JC Aquino Street</span> Butuan, Philippines</p>
+                </div>
+                <div>
+                    <i class="fa fa-phone"></i>
+                    <p>+63 9931253524</p>
+                </div>
+                <div>
+                    <i class="fa fa-envelope"></i>
+                    <p><a href="mailto:support@company.com">batch1@gmail.com</a></p>
+                </div>
+            </div>
+            <div class="footer-right">
+                <p class="footer-company-about"><span>About the company</span>Help every student, no matter what they're striving &amp; dreaming</p>
+                <div class="footer-icons">
+                    <a href="#"><i class="fa fa-facebook-square"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://github.com/JohnRobGG/StudyGuides"><i class="fa fa-github"></i></a>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
