--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="sectioncentered">
                 <div>
                     <section class="sectionone">
-                        <h2 class="headmaintitles"> Explanations you can easily understand</h2>
+                        <h2 class="headmaintitles"> Explanations you can easily understanding</h2>
                         <div class="letter-spacings">
                             <p>Study Guides explanations show you step-by-step approaches to solve and understand tough problems. Find solutions in major subject, all written and verified by experts.</p>
                         </div>
