--- a/Answer.html
+++ b/Answer.html
@@ -43,7 +43,8 @@
           text-indent: 15px;
           background: orange;
           color:white;
-          padding: 3px;
+          padding: 5px;
+          font-size: 20px;
         }
         h2{
           text-align: justify;
