--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
             </div>
             <div class="footer-right">
-                <p class="footer-company-about"><span>About the company</span>Help every student, no matter what they're striving &amp; dreaming</p>
+                <p class="footer-company-about"><span>About the site</span>Help every student, no matter what they're striving &amp; dreaming</p>
                 <div class="footer-icons">
                     <a href="#"><i class="fa fa-facebook-square"></i></a>
                     <a href="#"><i class="fa fa-twitter"></i></a>
