--- a/index.html
+++ b/index.html
@@ -48,19 +48,26 @@
             <div class="sectioncentered">
                 <div>
                     <section class="sectionone">
-                        <h2 class="headmaintitles"> Explanations you can easily understand</h2>
-                        <div class="letter-spacings">
-                            <p>Study Guides explanations show you step-by-step approaches to solve and understand tough problems. Find solutions in major subject, all written and verified by experts.</p>
+                        <div class="letterspartone">
+                            <h2 class="headmaintitles"> Explanations you can easily understand</h2>
+                            <div class="letter-spacings">
+                                <p>Study Guides explanations show you step-by-step approaches to solve and understand tough problems. Find solutions in major subject, all written and verified by experts.</p>
+                            </div>    
                         </div>
-                    </section>    
-                </div>
-                <div>
-                    <section class="sectionone">
-                        <h2 class="headmaintitles"> Tools for Knowledge</h2>
-                        <div class="letter-spacings">
+                        <div class="sectionpartright">
+                            <img class="sectionpic" src="sectiononepic.png" alt="pic" width="300px" height="100%">                    </section>    
+                        </div>
+                    </section>
+                    <div class="sectionneedflex">
+                        <div class="partrighttwo"></div>
+                        <div class="partleft">
+                            <h2 class="headmaintitlestwo"> Tools for Knowledge</h2>
+                            <div class="letter-spacingstwo">
                             <p>Some educational tools provide features that streamline collection, grading, and feedback for traditional paper-based class homework while other tools help expand beyond traditional homework by opening up more submission options.</p>
+                            </div>
+                            <img class="sectionpictwo" src="sectiontwopic.png" alt="pic" width="180px" height="100%">                    </section>    
                         </div>
-                    </section>    
+                    </div>
                 </div>
             </div>        
         </div>
